# AoC

./: .gitignore  README.md
22/03/: x03.cabal
22/03/app/: Main.hs
22/04/: x04.cabal
22/04/app/: Main.hs
22/05/: CHANGELOG.md  x05.cabal
22/05/app/: Main.hs
22/06/: x06.cabal
22/07/: CHANGELOG.md  x07.cabal
22/07/app/: CP.hs  Main.hs
22/08/: input4  x08.cabal
22/08/app/: Main.hs
22/09/: x09.cabal
22/09/app/: Main.hs
22/10/: x10.cabal
22/10/app/: Main.hs
22/11/: x11.cabal
22/11/app/: Main.hs
22/12/: x12.cabal
22/12/app/: Main.hs
22/13/: x13.cabal
22/13/app/: Main.hs
22/14/: x14.cabal
22/14/app/: Main.hs
22/15/: x15.cabal
22/15/app/: Main.hs
22/16/: Copy.hs  x16.cabal
22/16/app/: Main.hs
23/01/: LICENSE  x01.cabal
23/01/app/: Main.hs
23/02/: x02.cabal
23/02/app/: Main.hs
23/03/: x03.cabal
23/03/app/: Main.hs
23/04/: CHANGELOG.md  x04.cabal
23/04/app/: Main.hs
23/05/: x05.cabal
23/05/app/: Main.hs
23/06/: x06.cabal
23/06/app/: Main.hs
23/07/: x07.cabal
23/07/app/: Main.hs
23/08/: input  input2  x08.cabal
23/08/app/: Main.hs
23/09/: x09.cabal
23/09/app/: Main.hs
23/10/: input3  x10.cabal
23/10/app/: Main.hs
23/11/: x11.cabal
23/11/app/: Main.hs
23/12/: CHANGELOG.md  x12.cabal
23/12/app/: Main.hs
23/13/: x13.cabal
23/13/app/: Main.hs
23/14/: x14.cabal
23/14/app/: Main.hs
23/15/: x15.cabal
23/15/app/: Main.hs
23/16/: x16.cabal
23/16/app/: Main.hs
23/17/: x17.cabal
23/17/app/: Main.hs
23/18/: x18.cabal
23/19/: l  x19.cabal
23/20/: input  input3  l  x20.cabal
(+3 files in other folders)
