cabal-version:      2.4
name:               x03
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kubaneko
maintainer:         kubanek0ondrej@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable x03
    main-is:          Main.hs
    ghc-options:        -XPackageImports

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, extra, cond, monad-extras
    hs-source-dirs:   app
    default-language: Haskell2010
